Added Diff section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Batracer Set up adjuster VSK version</title>
+    <title>Batracer Weather Tool</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
       .container{
@@ -44,12 +44,12 @@
     </style>
   </head>
 
-  <body><h1>VSK weather tool v.03</h1>
+<body style="background-color: #F5F5F5"><h1 style="background-color: #2F4F4F; color: #F5F5F5"><b><center>Batracer Weather tool.</center></b></h1><a href=./help.html target="_blank">HELP!</a>
     <div class="container">
       <div class="row">
         <div class="col-md-3">
           <div class="page-header">
-            <h1>Team talk input</h1>
+            <h2 style="background-color: #2F4F4F; color: #F5F5F5"><b><center>Team talk Input</h2></b></center>
           </div>
           <form class="form" role="form">
             <div class="form-group" >
@@ -394,7 +394,7 @@
 
         <div class="col-md-3">
           <div class="page-header">
-            <h1>Team talk Output</h1>
+<h2 style="background-color: #2F4F4F; color: #F5F5F5"><b><center>Team talk Output</center></B></h2>
           </div>
           <form class="form">
             <div id="result" class="form-group" data-bind="html: results">
